--- a/style.css
+++ b/style.css
@@ -1,8 +1,143 @@
-body {
-    margin:0;
+/*zeramos todas as configurações da pagina */
+* {
+    margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-img {
-    border-radius: 28px;
+/* */
+:root {
+    font-size:62,5%;
+    font-family: "Open sans", sans-serif;
+    --background-default: #f5f4f0;
+  --border-primary: #d9d9d9;
+
+  --text-primary: #1b1b1b;
+  --text-secondary: #333333;
+  --text-tertiary: #696969;
+  --text-headliene: #e1624f;
+
+  --accent-blue: #0c51a7;
+  --accent-orange: #e95e10;
+  --accent-pink: #e5245e;
+  --accent-purple: #591b98;
 }
+
+body {
+    font-size: 1.6rem;
+}
+
+#Container {
+    margin: 8.8rem 8rem 4.8rem;
+}
+
+h1 {
+    font-size: 3.6rem;
+    color: var(--text-primary);
+    padding-top: 0.8rem;
+  }
+
+  h2 {
+    font-size: 3.2rem;
+    padding-block: 0.2rem 0.8rem;
+  }
+  
+  h3 {
+    font-size: 2.8rem;
+    padding-bottom: 0.4rem;
+  }
+  
+  span,
+  li {
+    
+    font-weight: bold;
+  }
+  
+  img {
+    border-radius: 28px;
+    width: 100%;
+    object-fit: cover;
+  }
+  
+  .headline {
+    color: var(--text-headliene);
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+  
+  p {
+    color: var(--text-secondary);
+  }
+  
+  .description {
+    text-align: center;
+    font-style: italic;
+  }
+  
+  header img {
+    margin: 4rem 0 2rem;
+  }
+  
+  .divider {
+    width: 100%;
+    height: 1px;
+    background-color: var(--border-primary);
+    margin-block: 4rem;
+  }
+  
+  .divider:first-child {
+    margin-bottom: 6.4rem;
+  }
+  
+  main .content-list {
+    margin-block: 6.4rem;
+  }
+  
+  .destination img {
+    margin-bottom: 2rem;
+  }
+  
+  .destination + .destination {
+    margin-top: 4.8rem;
+  }
+  
+  ol {
+    margin-left: 4.2rem;
+  }
+  
+  ul {
+    margin-left: 2rem;
+  }
+  
+  .destination ul li:first-child {
+    color: var(--accent-blue);
+  }
+  
+  .destination ul li::marker {
+    color: var(--text-secondary);
+  }
+  
+  .destination:last-child ul li:first-child {
+    color: var(--accent-purple);
+  }
+  
+  .destination:last-child ul li {
+    color: var(--accent-pink);
+  }
+  
+  .destination:last-child ul li:last-child {
+    color: var(--accent-orange);
+  }
+  
+  footer {
+    margin-block: 6.5rem 4.8rem;
+    text-align: center;
+    line-height: 150%;
+    color: var(--text-secondary);
+  }
+  
+  footer img {
+    width: 16px;
+    height: 16px;
+    vertical-align: middle;
+  }
